...
              value: ref.watch(sessionProvider).value == null
                  ? 'login'
                  : 'logout',
              child: Text(
                ref.watch(sessionProvider).value == null
                    ? 'Iniciar sesión'
                    : 'Cerrar sesión',
              ),
            ),
          ],
        ),
      ],
    ),
...
